--- a/Streamus/Streamus.Web/Views/Web.config
+++ b/Streamus/Streamus.Web/Views/Web.config
@@ -18,9 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
 				<add namespace="Kendo.Mvc.UI" />
-				<add namespace="Google.YouTube" />
-				<add namespace="Google.GData.Client" />
 				<add namespace="Streamus.Web" />
+				<add namespace="Streamus.Web.Infrastructure.HtmlHelpers" />
 				<add namespace="Streamus.Common" />
       </namespaces>
     </pages>
